# rpg

./: BUILD  WORKSPACE  deps.bzl  go.mod  go.sum
dice/: BUILD.bazel  main.go
proto/: BUILD.bazel  dice.proto
