load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "dice_lib",
    srcs = ["main.go"],
    importpath = "github.com/lbrooks/rpg/dice",
    visibility = ["//visibility:private"],
    deps = [
        "//proto:dice",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "dice",
    embed = [":dice_lib"],
    visibility = ["//visibility:public"],
)
