load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "dice_proto",
    srcs = ["dice.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "dice_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/lbrooks/rpg/proto/dice",
    proto = ":dice_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "dice",
    embed = [":dice_go_proto"],
    importpath = "github.com/lbrooks/rpg/proto/dice",
    visibility = ["//visibility:public"],
)
